--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,7 +20,13 @@ body {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+
 }
+
+#firstBox {
+  width: 350px;
+}
+
 
 #leftBox {
   /* border: 3px solid Yellow; */
@@ -39,7 +45,6 @@ body {
   /* border: 3px solid red; */
   position: absolute;
   bottom: 20px;
-
   display: none;
   align-items: center;
   justify-content: center;
@@ -103,19 +108,30 @@ body {
 }
 #headingtwo {
   font-size: 17px;
+  font-weight: 550;
+  line-height: 12px;
+  margin-bottom: 2px;
+
 }
 
 #headingthree {
-  font-size: 12px;
-  opacity: 0.8;
+  font-size: 14px;
+  font-weight: 450px;
+  margin: 0;
 }
+
+#headingfour {
+  font-size: 11px;
+}
+
 
 #imageUpload {
   display: flex;
   background-color: rgb(0,163,224);
-  padding: 0px 20px 0px 0px;
+  padding: 0px 20px 0px 60px;
   cursor: pointer;
   align-items: center;
+
 }
 #crossSvg {
   display: none;
@@ -136,6 +152,9 @@ body {
     width: 100%;
   }
   #leftBox {
+    width: 100%;
+  }
+  #firstBox {
     width: 100%;
   }
 }
